# native-erc20-connector

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.github/: workflow.yml
.github/workflows/: rust.yml  solidity.yml
aurora-locker/: foundry.toml
aurora-locker/src/: AuroraSdk.sol  Borsh.sol  Codec.sol  Locker.sol  Types.sol  Utils.sol
aurora-locker/test/: AuroraSdk.t.sol  Locker.t.sol
connector-cli/: Cargo.toml  README.md  config.json
connector-cli/src/: cli.rs  config.rs  create_token.rs  deploy.rs  log.rs  main.rs
connector-cli/src/near_rpc_ext/: aurora_engine_utils.rs  client_like.rs  mod.rs  type_munging.rs
connector-cli/src/tests/: create_token.rs  deploy.rs  mod.rs
near-token-common/: Cargo.toml
near-token-common/src/: aurora.rs  lib.rs  sdk.rs  types.rs
near-token-contract/: Cargo.toml
near-token-contract/src/: ext.rs  lib.rs
near-token-factory/: Cargo.toml
near-token-factory/src/: ext.rs  lib.rs
tests/: Cargo.toml
tests/res/: hello.wasm
tests/src/: acl_utils.rs  aurora_locker_utils.rs  git_utils.rs  lib.rs  nep141_utils.rs  process_utils.rs  token_factory_utils.rs  wnear_utils.rs
tests/src/aurora_engine_utils/: erc20.rs  mod.rs  repo.rs
tests/src/tests/: mod.rs  promise_result.rs
