[workspace]
members = [
  "near-token-common",
  "near-token-contract",
  "near-token-factory",
  "tests",
]

[workspace.metadata.workspaces]
version = "0.15.0"

[workspace.dependencies]
anyhow = "1.0"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
base64 = "0.13.0"
ethabi = "17.2"
hex = "0.4"
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
serde = "1"
serde_json = "1"
tokio = { version = "1.18", features = ["full"] }
toml = "0.5"
uint = { version = "0.9.3", default-features = false }
workspaces = { git = "https://github.com/near/workspaces-rs.git", rev = "8b3356a29f71756d86840679d3ff162b885123c9" }

[workspace.package]
edition = "2021"
authors = ["Aurora Labs <hello@aurora.dev>"]
rust-version = "1.64.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

