[workspace]
members = [
  "connector-cli",
  "near-token-common",
  "near-token-contract",
  "near-token-factory",
  "tests",
]
exclude = ["target"]

[workspace.metadata.workspaces]
version = "0.15.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.58"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-precompiles = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0", features = ["impl-serde"] }
base64 = "0.13.0"
borsh = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
ethabi = "17.2"
hex = "0.4"
near-account-id = "0.15.0"
near-crypto = "0.15.0"
near-contract-standards = "4.0.0"
near-jsonrpc-client = "0.4.0"
near-jsonrpc-primitives = "0.15.0"
near-primitives = "0.15.0"
near-sdk = "4.0.0"
near-token-common = { path = "near-token-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.18", features = ["full"] }
toml = "0.5"
uint = { version = "0.9.3", default-features = false }
workspaces = { git = "https://github.com/near/workspaces-rs.git", rev = "8b3356a29f71756d86840679d3ff162b885123c9" }

[workspace.package]
edition = "2021"
authors = ["Aurora Labs <hello@aurora.dev>"]
rust-version = "1.64.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
