[workspace]
members = [
  "near-token-common",
  "near-token-contract",
  "near-token-factory",
  "tests",
]
exclude = ["target"]

[workspace.metadata.workspaces]
version = "0.15.0"

[workspace.dependencies]
anyhow = "1.0"
aurora-engine = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-precompiles = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "2.7.0" }
base64 = "0.13.0"
borsh = "0.9"
ethabi = "17.2"
hex = "0.4"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.0.1" }
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
near-token-common = { path = "near-token-common" }
serde = "1"
serde_json = "1"
tokio = { version = "1.18", features = ["full"] }
toml = "0.5"
uint = { version = "0.9.3", default-features = false }
workspaces = "0.6"

[workspace.package]
edition = "2021"
authors = ["Aurora Labs <hello@aurora.dev>"]
rust-version = "1.64.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
