[package]
name = "connector-cli"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
near-account-id.workspace = true
near-token-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
