[package]
name = "connector-cli"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aurora-engine.workspace = true
aurora-engine-types.workspace = true
base64.workspace = true
borsh.workspace = true
chrono.workspace = true
clap.workspace = true
ethabi.workspace = true
hex.workspace = true
near-account-id.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-primitives.workspace = true
near-token-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
