[package]
name = "near-token-contract"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
near-contract-standards.workspace = true
near-sdk.workspace = true
uint.workspace = true
near-token-common = { path = "../near-token-common" }

[dev-dependencies]
