[package]
name = "near-token-contract"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags.workspace = true
near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true
near-token-common.workspace = true
uint.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
workspaces.workspace = true
