[package]
name = "near-token-factory"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk.workspace = true
uint.workspace = true
hex.workspace = true
near-token-common = { path = "../near-token-common" }

[dev-dependencies]
ethabi.workspace = true
