[package]
name = "near-token-factory"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hex.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true
near-token-common.workspace = true
uint.workspace = true

[dev-dependencies]
ethabi.workspace = true
