[package]
name = "aurora-native-erc20-connector-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
aurora-engine.workspace = true
aurora-engine-types.workspace = true
workspaces.workspace = true
tokio.workspace = true
toml.workspace = true
