[package]
name = "aurora-native-erc20-connector-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
aurora-engine.workspace = true
aurora-engine-precompiles.workspace = true
aurora-engine-sdk.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
borsh.workspace = true
ethabi.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
workspaces.workspace = true
